# pocos-news-bot

./: .gitignore  Makefile  database.dvc  models.dvc  pyproject.toml  requirements.txt
.dvc/: config
docker/: Dockerfile.frontend  Dockerfile.jupyter  docker-compose.yml  pyodbc.sh
notebooks/: access-azure-database.ipynb  bot.ipynb  chatbot.ipynb  chroma.ipynb  criar-vectorestore-chroma.ipynb  criar-vectorestore-faiss.ipynb  criar-vectorestore.ipynb  populate-azure-database.ipynb  refact.ipynb  teste-bot-Copy1.ipynb
notebooks/prompts/: prompt_greeting.json  prompt_intention.json  prompt_query.json  prompt_standalone_question.json
src/: __main__.py  cli.py
src/bot/: __init__.py  __main__.py  _config.py  _local_memory.py  _newsbot.py  config.py  data_models.py  newsbot.py  vector_database.py
src/bot/handlers/: __init__.py  _base.py  _fallback_handler.py  _greeting_handler.py  _intention_handler.py  _query_handler.py  _standalone_handler.py
src/bot/prompts/: prompt_greeting.json  prompt_query.json  prompt_standalone_question.json  prompt_user_intention.json
src/bot/vector_databases/: __init__.py  _chroma.py  base.py  exceptions.py
src/ui/: __init__.py  app.py  components.py
src/ui/.streamlit/: config.toml
src/ui/pages/: chat.py  login.py  register.py  reset_password.py
src/ui/src/: components.py
src/ui/users/: config.yaml
