
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot"
description = "a simple bot"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["sample", "setuptools", "development"]
authors = [
  {name = "Eduardo Messias de Morais", email = "emdemor415@gmail.com" },
  {name = "Caroline Moraes da Cruz", email = "carolinemoraesdacruz@gmail.com" },
]
dynamic = ["version"]
dependencies = [
  "chromadb==0.4.20",
  "pyodbc==5.0.1",
  "fastapi==0.105.0",
  "uvicorn[standard]==0.24.0.post1",
  "pydantic==2.5.2",
  "azure-identity==1.15.0",
  "pandas==2.1.4",
  "loguru==0.7.2",
  "streamlit==1.29.0",
  "streamlit-authenticator==0.2.3",
  "streamlit-chat==0.1.1",
  "streamlit-extras==0.3.6",
  "streamlit-feedback==0.1.3",
  "typer==0.9.0",
  "langchain==0.0.351",
  "sentence-transformers==2.2.2",
  "openai==1.6.0",
  "tiktoken==0.5.2",
  "dvc==3.36.1",
]

[project.optional-dependencies]
lint = [
    "black==23.7.0",
    "flake8==6.1.0",
    "Flake8-pyproject==1.2.3",
    "mypy==1.4.1",
    "bandit==1.7.5",
]
test = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.11.1",
    "pytest-mypy==0.10.3",
]

[tool.setuptools.dynamic]
version = {attr = "bot.__version__"}

[project.scripts]
bot = "bot.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
cache_dir = "/tmp/mypy_cache"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
ignore = ["D203", "W504"]
per-file-ignores = ["sample/module.py:E501"]

[tool.back]
target-version = ["py311"]
line-length = 120
extend-ignore = ["D203", "W504"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider -vvv --durations=0 --disable-warnings --cov --cov-report term-missing"